New package manager support, update ReSharper 8.2 SDK

--- a/FixiePlugin/packages.config
+++ b/FixiePlugin/packages.config
@@ -3,5 +3,5 @@
   <package id="Fixie" version="0.0.1.144" targetFramework="net45" />
   <package id="JetBrains.ReSharper.SDK" version="8.0.1243" targetFramework="net45" />
   <package id="JetBrains.ReSharper.SDK" version="8.1.555" targetFramework="net45" />
-  <package id="JetBrains.ReSharper.SDK" version="8.2.921-EAP" targetFramework="net45" />
+  <package id="JetBrains.ReSharper.SDK" version="8.2.1158" targetFramework="net45" />
 </packages>
