--- a/FixiePlugin.Tests/FixiePlugin.Tests.8.2.csproj
+++ b/FixiePlugin.Tests/FixiePlugin.Tests.8.2.csproj
@@ -41,19 +41,19 @@
       <HintPath>..\packages\FluentAssertions.2.2.0.0\lib\net45\FluentAssertions.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.Metadata">
-      <HintPath>..\packages\JetBrains.ReSharper.SDK.8.2.921-EAP\bin\JetBrains.Platform.ReSharper.Metadata.dll</HintPath>
+      <HintPath>..\packages\JetBrains.ReSharper.SDK.8.2.1158\bin\JetBrains.Platform.ReSharper.Metadata.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.ProjectModel">
-      <HintPath>..\packages\JetBrains.ReSharper.SDK.8.2.921-EAP\Bin\JetBrains.Platform.ReSharper.ProjectModel.dll</HintPath>
+      <HintPath>..\packages\JetBrains.ReSharper.SDK.8.2.1158\Bin\JetBrains.Platform.ReSharper.ProjectModel.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.Util">
-      <HintPath>..\packages\JetBrains.ReSharper.SDK.8.2.921-EAP\bin\JetBrains.Platform.ReSharper.Util.dll</HintPath>
+      <HintPath>..\packages\JetBrains.ReSharper.SDK.8.2.1158\bin\JetBrains.Platform.ReSharper.Util.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.ReSharper.TaskRunnerFramework">
-      <HintPath>..\packages\JetBrains.ReSharper.SDK.8.2.921-EAP\bin\JetBrains.ReSharper.TaskRunnerFramework.dll</HintPath>
+      <HintPath>..\packages\JetBrains.ReSharper.SDK.8.2.1158\bin\JetBrains.ReSharper.TaskRunnerFramework.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.ReSharper.UnitTestFramework">
-      <HintPath>..\packages\JetBrains.ReSharper.SDK.8.2.921-EAP\Bin\JetBrains.ReSharper.UnitTestFramework.dll</HintPath>
+      <HintPath>..\packages\JetBrains.ReSharper.SDK.8.2.1158\Bin\JetBrains.ReSharper.UnitTestFramework.dll</HintPath>
     </Reference>
     <Reference Include="NSubstitute">
       <HintPath>..\packages\NSubstitute.1.7.2.0\lib\NET45\NSubstitute.dll</HintPath>
@@ -78,7 +78,6 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <PropertyGroup>
     <PostBuildEvent>
     </PostBuildEvent>
