--- a/FixiePlugin.Tests/FixiePlugin.Tests.8.2.csproj
+++ b/FixiePlugin.Tests/FixiePlugin.Tests.8.2.csproj
@@ -33,9 +33,6 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Fixie">
-      <HintPath>..\packages\Fixie.0.0.1.144\lib\net45\Fixie.dll</HintPath>
-    </Reference>
     <Reference Include="FluentAssertions, Version=2.2.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\FluentAssertions.2.2.0.0\lib\net45\FluentAssertions.dll</HintPath>
@@ -72,6 +69,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\fixie\src\Fixie\Fixie.csproj">
+      <Project>{474ff43b-4580-4032-999b-a717eb7a0cd3}</Project>
+      <Name>Fixie</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FixiePlugin\FixiePlugin.8.2.csproj">
       <Project>{a9abd1bf-1ccf-4247-8138-5988bf9a6b04}</Project>
       <Name>FixiePlugin.8.2</Name>
